# RLBOT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  mkdocs.yml  pyproject.toml
.devcontainer/: .devcontainer.json  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: docker-image.yml
agents/t00001/: __init__.py  agent_config.py  agent_model.py  feature_config.py
apis/: mt5.py
infrastructure/aerospike/: aerospike.conf
infrastructure/redis/: redis.conf
infrastructure/releat/: Dockerfile
infrastructure/rlbot/: Dockerfile  entrypoint.sh
python=/conda-meta/: history
rlbot/: cli.py
rlbot/connectors/: aerospike.py  mt5.py  s3.py
rlbot/data/: cleaning.py  extractor.py  inference.py  pipeline.py  transformers.py  utils.py
rlbot/data/simple/: __init__.py  stats.py
rlbot/gym_env/: action_processor.py  gym_env.py  mask.py  metrics.py  obs_processor.py
rlbot/models/tf/: gated_residual.py  temporal_fusion_transformer.py
rlbot/signals/: feature_builder.py  portfolio_manager.py  rl_actor.py  signal_generator.py  tick_handler.py
rlbot/trader/: trader.py
rlbot/utils/: logging.py  time.py  utils.py
rlbot/utils/configs/: config_builder.py  constants.py  data_models.py
rlbot/workflows/: download_mt5_data.py  generate_signals.py  service_manager.py  train_rl_agent.py
tests/apis/: test_mt5_api.py
tests/unit/releat/gym/: test_gym.py  test_metrics.py
tests/unit/releat/trader/: test_signal_generator.py
