[tool.poetry]
name = "rlbot"
version = "0.0.1"
description = ""
authors = ["Seanman519 <seanman519@gmail.com>"]
readme = "README.md"
packages = [{include = "rlbot"}, {include = "agents"}]

[tool.poetry.scripts]
rlbot = "rlbot.cli:app"

[tool.poetry.dependencies]
python = "3.11.5"
ib-insync = "*"
numba = "*"
p-tqdm = "*"
boto3 = "*"
pyyaml = "*"
statsmodels = "*"
scikit-learn = "*"
pandas = "*"
matplotlib = "*"
ray = {extras = ["all"], version = "2.5.1"}
polars-u64-idx = {extras = ["fsspec", "numpy", "pyarrow","pandas"], version = "*"}
pydantic = "*"
fastapi = "*"
plotly = "*"
notebook = "*"
ipywidgets = "*"
tensorflow = "*"
flask = "*"
setproctitle = "*"
typer = "*"
redis = {extras = ["hiredis"], version = "*"}
xgboost = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
pytest-cookies = "*"
mkdocs = "*"
mkdocs-material = "*"
deptry = "*"
mypy = "*"
ipython = "*"
ipykernel = "*"
nbconvert = "*"
mkdocs-jupyter = "*"
tomli = "*"

[tool.poetry.group.mt5]
optional = true

[tool.poetry.group.mt5.dependencies]
MetaTrader5 = "*"
pandas = "*"
flask = {extras=["async"], version="*"}

[tool.poetry.group.rl]
optional = true

[tool.poetry.group.rl.dependencies]
aerospike = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py310']
preview = true

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.deptry]
ignore_notebooks = "True"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/unit",
    "tests/system",
    "tests/integration",
]
